fixed height caused by carousel overflow

--- a/components/Navigation/Toolbar/Toolbar.module.css
+++ b/components/Navigation/Toolbar/Toolbar.module.css
@@ -8,7 +8,7 @@
 }
 
 .BoxShadow{
-    box-shadow: 0px 0.5px 0px #ebf0f7;
+    box-shadow: 0px 1px 0px #ebf0f7;
 }
 
 .Toolbar {
